# nmjmc

./: .gitmodules  CMakeLists.txt  README.md  setup.py
binding/hungarian-algorithm-cpp/: binding.cpp
local_data/: particles_reference_configurations.npz
nmjmc/: util.py
nmjmc/nn/: __init__.py  loss.py  neuralMJMC.py  revbase.py  train.py
nmjmc/sampling/: __init__.py  mc_sampler.py  mixture.py
nmjmc/systems/: __init__.py  gaussian_2d.py  non_attractive_particles.py  particles.py
notebooks/: NMJMC_particles_generate_dataset.ipynb  NMJMC_particles_sampling.ipynb  NMJMC_particles_training.ipynb  NMJMC_triple_well_sample.ipynb  NMJMC_triple_well_training.ipynb
